--- a/Day 3/CreateServer/package.json
+++ b/Day 3/CreateServer/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "notesapp",
+  "name": "createserver",
   "version": "1.0.0",
-  "description": "This is elegant note app developed using NodeJs",
+  "description": "This is simple example to showcase Create Server",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
