--- a/Day 4/ExpressWeatherApp/package.json
+++ b/Day 4/ExpressWeatherApp/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "hbs": "^4.0.1"
+    "hbs": "^4.0.1",
+    "request": "^2.85.0"
   }
 }
